[package]
name = "quanta"
version = "0.1.0"
authors = ["Lorxu <sam@dirkback.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { git="https://github.com/vulkano-rs/vulkano", rev="6ca6d84a87324c29a7415343455a6cb080b6f416" }
vulkano-win = { git="https://github.com/vulkano-rs/vulkano", rev="6ca6d84a87324c29a7415343455a6cb080b6f416" }
# vulkano_shaders 0.16 has a bug that was fixed in git; when >=0.16.1 comes out we can switch back to crates.io
vulkano-shaders = { git="https://github.com/vulkano-rs/vulkano", rev="6ca6d84a87324c29a7415343455a6cb080b6f416" }
winit = "0.19.4"
nalgebra = "*"
stopwatch = "*"
noise = "*"
num-traits = "*"
app_dirs2 = "2.0"
zstd = "*"
ron = "*"
bincode = "*"
serde = { version = "*", features = ["derive", "rc"] }
