[package]
name = "quanta"
version = "0.1.0"
authors = ["Lorxu <sam@dirkback.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { git="https://github.com/vulkano-rs/vulkano", rev="c620aefd29d03bc0330a44fd2e2df8a5160e9d7c" }
vulkano-win = { git="https://github.com/vulkano-rs/vulkano", rev="c620aefd29d03bc0330a44fd2e2df8a5160e9d7c" }
# vulkano_shaders 0.16 has a bug that was fixed in git; when >=0.16.1 comes out we can switch back to crates.io
vulkano-shaders = { git="https://github.com/vulkano-rs/vulkano", rev="c620aefd29d03bc0330a44fd2e2df8a5160e9d7c" }
winit = "0.20"
nalgebra = "*"
stopwatch = "*"
noise = "*"
num-traits = "*"
app_dirs2 = "2.0"
zstd = "*"
ron = "*"
bincode = "*"
serde = { version = "*", features = ["derive", "rc"] }
enum-iterator = "*"
num-derive = "*"
specs = { version = "*", features = ["shred-derive", "parallel"] }
